<resources>
    <string name="app_name">ForContact</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="userName">用户名/手机号</string>
    <string name="passWord">密码</string>
    <string name="login">登录</string>
    <string name="third_account_login">第三方登录</string>
    <string name="back">返回</string>
    <string name="username_password_roles">0123456789abcdefghijklmnopqrstuvwxyzZXCVBNMLKJHGFDSAQWERTYUIOP</string>
    <string name="nav_route_destination">终点</string>
    <string name="nav_route_start">起点/我的位置</string>D
    <string name="nav_route_button">路线</string>
    <string name="my_location">我的位置</string>
    <string name="current_location">当前位置</string>
    <string name="my_friends">我的朋友</string>
    <string name="friends_list">好友列表</string>
    <string name="bound">周边</string>
    <string name="nearby">附近</string>
    <string name="cityIn">室内</string>
    <string name="search">搜索</string>
    <string name="drive">开车</string>
    <string name="walk">步行</string>
    <string name="transist">公交</string>
</resources>
