<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_friend_list"
            android:icon="@drawable/friends"
            android:title="@string/friends_list"/>
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/cityIn"
            android:textSize="@dimen/nav_item_text_size"/>
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/bound"
            android:textSize="@dimen/nav_item_text_size"/>
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nearby"
            android:textSize="@dimen/nav_item_text_size"/>
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share"
                android:textSize="@dimen/nav_item_text_size"/>
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send"
                android:textSize="@dimen/nav_item_text_size"/>
        </menu>
    </item>

</menu>
