<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="300dp"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">

        <RelativeLayout
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_marginTop="10dp"
                android:id="@+id/userName"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:paddingLeft="15dp"
                android:textSize="15sp"
                android:hint="@string/nav_route_start"
                android:background="@drawable/edittext_select"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <EditText
                android:inputType="textPassword"
                android:id="@+id/password"
                android:maxLength="15"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:paddingLeft="15dp"
                android:hint="@string/nav_route_destination"
                android:textSize="15sp"
                android:background="@drawable/edittext_select"/>
        </RelativeLayout>

        <Button
            android:clickable="true"
            android:enabled="true"
            android:id="@+id/start_nav_route"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/login_button_style_gray"
            android:text="@string/nav_route_button"/>

</LinearLayout>