<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.zhf.forcontact.LoginActivity">

    <LinearLayout
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <RelativeLayout
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/userName"
                android:maxLength="15"
                android:digits="@string/username_password_roles"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:paddingLeft="45dp"
                android:textSize="16dp"
                android:hint="@string/userName"
                android:background="@drawable/edittext_select"/>
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="5dp"
                android:src="@drawable/user"
                android:layout_alignLeft="@+id/userName"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp">
            <EditText
                android:inputType="textPassword"
                android:id="@+id/password"
                android:digits="@string/username_password_roles"
                android:maxLength="15"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:paddingLeft="45dp"
                android:hint="@string/userName"
                android:textSize="16dp"
                android:background="@drawable/edittext_select"/>
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="5dp"
                android:src="@drawable/pass_word"
                android:layout_alignLeft="@+id/password"/>
        </RelativeLayout>

        <Button
            android:clickable="true"
            android:enabled="true"
            android:id="@+id/app_login"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/login_button_style_gray"
            android:text="@string/login"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="100dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <View
                android:layout_gravity="center_vertical"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="1dp"
                android:background="@color/color_login_button_bg"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:text="@string/third_account_login"
                android:gravity="center"
                android:textSize="12dp"/>
            <View
                android:layout_gravity="center_vertical"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="1dp"
                android:background="@color/color_login_button_bg"/>
        </LinearLayout>
        <LinearLayout
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/wecaht_login"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/wechat_icon"/>
            <ImageView
                android:id="@+id/qq_login"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/qq_icon"/>
            <ImageView
                android:id="@+id/weibo_login"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/webo_icon"/>
        </LinearLayout>



    </LinearLayout>


</LinearLayout>
